[tool.poetry]
name = "blurry-cli"
version = "0.8.1"
description = "A Mistune-based static site generator for Python"
authors = ["John Franey <franey@duck.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/blurry-dev/blurry"
keywords = ["static-site-generator", "seo", "pagespeed"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Topic :: Internet :: WWW/HTTP :: Site Management ",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML ",
    "Topic :: Text Processing :: Markup :: Markdown ",
]
include = ["LICENSE"]
packages = [{ include = "blurry" }]

[tool.poetry.dependencies]
Jinja2 = "^3.0.0"
PyLD = "^2.0.3"
Wand = "^0.6.6"
ffmpeg-python = "^0.2.0"
livereload = "^2.6.3"
mistune = "^3.0.0rc5"
python = "^3.10"
rich = "^13.3.3"
selectolax = "^0.3.6"
toml = "^0.10.2"
typer = "^0.6.1"
htmlmin2 = "^0.1.13"
pydantic2-schemaorg = "^0.1.1"
dpath = "^2.1.6"
jinja2-simple-tags = "^0.6.1"

[tool.poetry.scripts]
blurry = 'blurry:main'

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
nox = "^2024.03.02"
pyright = "^1.1.311"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-watch = "^4.2.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["blurry/**"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "blurry/tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.poetry.plugins."blurry.html_plugins"]
minify_html = 'blurry.plugins.html_plugins.minify_html_plugin:minify_html'

[tool.poetry.plugins."blurry.markdown_plugins"]
python_code = 'blurry.plugins.markdown_plugins.python_code_plugin:python_code'
python_code_in_list = 'blurry.plugins.markdown_plugins.python_code_plugin:python_code_in_list'
punctuation = 'blurry.plugins.markdown_plugins.punctuation_plugin:punctuation'
container = 'blurry.plugins.markdown_plugins.container_plugin:container'

[tool.poetry.plugins."blurry.jinja_extensions"]
blurry_image = "blurry.plugins.jinja_plugins.blurry_image_extension:BlurryImage"
