[project]
name = "blurry-cli"
version = "0.14.0"
description = "A Mistune-based static site generator for Python"
authors = [{name = "John Franey", email = "franey@duck.com"}]
license = "MIT"
readme = "README.md"
keywords = ["static-site-generator", "seo", "pagespeed"]
requires-python = "^3.11"
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "Jinja2",
    "PyLD",
    "Wand",
    "ffmpeg-python",
    "livereload",
    "mistune",
    "rich",
    "selectolax",
    "typer",
    "htmlmin2",
    "dpath",
    "jinja2-simple-tags",
    "jinjax",
    "pydantic",
]

[project.urls]
repository = "https://github.com/blurry-dev/blurry"
documentation = "https://blurry-docs.netlify.app/"

[tool.poetry]
include = ["LICENSE"]
packages = [{ include = "blurry" }]

[tool.poetry.dependencies]

[project.scripts]
blurry = 'blurry:main'

[tool.poetry.group.dev.dependencies]
black = ">=24.10,<26.0"
nox = ">=2024.10.9,<2026.0.0"
pyright = "^1.1.391"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = ">=0.8.6,<0.10.0"
pytest-watcher = "^0.4.3"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["blurry/**"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "blurry/tests"]

[tool.pytest-watcher]
now = true
runner = "pytest"

[tool.ruff]
target-version = "py311"
line-length = 88

[project.entry-points."blurry.html_plugins"]
minify_html = 'blurry.plugins.html_plugins.minify_html_plugin:minify_html'

[project.entry-points."blurry.markdown_plugins"]
python_code = 'blurry.plugins.markdown_plugins.python_code_plugin:python_code'
python_code_in_list = 'blurry.plugins.markdown_plugins.python_code_plugin:python_code_in_list'
punctuation = 'blurry.plugins.markdown_plugins.punctuation_plugin:punctuation'
container = 'blurry.plugins.markdown_plugins.container_plugin:container'

[project.entry-points."blurry.jinja_extensions"]
blurry_image = "blurry.plugins.jinja_plugins.blurry_image_extension:BlurryImage"

[project.entry-points."blurry.jinja_filter_plugins"]
url_path = "blurry.plugins.jinja_plugins.filters:url_path"
headings = "blurry.plugins.jinja_plugins.filters:headings"
