[project]
name = "blurry-docs"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "blurry-cli @ {root:uri}/..",
]
dynamic = ["optional-dependencies"]

[tool.uv.dependencies]
dev = [
  "blurry-cli[dev] @ {root:uri}/..",
]

[project.entry-points."blurry.jinja_filter_plugins"]
body_to_cards = "blurry_docs:body_to_cards"
