[project]
name = "blurry-docs"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "blurry-cli",
]
dynamic = ["optional-dependencies"]

[project.entry-points."blurry.jinja_filter_plugins"]
body_to_cards = "blurry_docs:body_to_cards"

[tool.setuptools]
packages = ["blurry_docs"]

[tool.uv.sources]
blurry-cli = { path = "../", editable = true }
